argocd/storage-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5000
  type: LoadBalancer
